# thepoint

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  version.py
.github/workflows/: docker.yml
thepoint/: hashers.py  settings.py  sitemaps.py  urls.py
thepoint/locale/en_AU/LC_MESSAGES/: django.mo  django.po
thepoint/static/style/: default.css  icons.css  print.css  titlepage.css
thepoint/templates/directory/: index.html  print.html  print_compact.html
thepoint/templates/flatpages/: contact.html  default.html  home.html
thepoint/templates/members/: portal_home.html
thepoint/templates/resources/: index.html
thepoint/templates/roster/: pdf.html  reminder.txt
thepoint/templates/site/: base.html  header.html  navbar.html
thepoint/templates/weblog/: base.html
