[build-system]
requires = ["poetry>=1.7"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "thepoint"
description = "A Django project for The Point Church's website."
authors = [
    "Craig Holyoak <craig@helmsdeep.org>",
]
license = "GPL-2.0-only"
readme = "README.md"
repository = "https://github.com/thepointchurch/"
homepage = "https://github.com/thepointchurch/"
version = "2023.12.16"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
coverage = "~7"
gitpython = "~3"
pre-commit = "~3"
pylint = "~3"
semantic_version = "~2"
tomlkit = "~0"


[tool.pylint.master]
jobs = 0

[tool.pylint.format]
max-line-length = 119

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "duplicate-code",
]

[tool.pylint.variables]
ignored-argument-names = "kwargs|args"


[tool.isort]
combine_as_imports = true
include_trailing_comma = true
known_first_party = "upperroom"
line_length = 119
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true


[tool.black]
line-length = 119
include = '\.pyi?$'
