[project]
name = "thepoint"
version = "2025.1.25"
description = "A Django project for The Point Church's website."
license = "GPL-2.0-only"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Craig Holyoak", email = "craig@helmsdeep.org"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = []

[project.urls]
homepage = "https://github.com/thepointchurch/"
repository = "https://github.com/thepointchurch/"

[tool.poetry]
requires-poetry = ">=2.0"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
coverage = "~7"
gitpython = "~3"
pre-commit = "~4"
pylint = "~3"
semantic_version = "~2"
tomlkit = "~0"

[tool.poetry.requires-plugins]
poetry-plugin-shell = ">=1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pylint.master]
jobs = 0

[tool.pylint.format]
max-line-length = 119

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "duplicate-code",
]

[tool.pylint.variables]
ignored-argument-names = "kwargs|args"


[tool.isort]
combine_as_imports = true
include_trailing_comma = true
known_first_party = "upperroom"
line_length = 119
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true


[tool.black]
line-length = 119
include = '\.pyi?$'
